--- a/www-root/includes/header.html
+++ b/www-root/includes/header.html
@@ -243,6 +243,7 @@ $('#nav-search').click(function(){
 $('#nav-search-close').click(function(){
 	$('#search-input').hide();
 	$('#nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').fadeTo('slow', 1);
+  $('#nav-search').focus();
 });
 </script>
 
