comment out  print stylesheet, import print.scss

--- a/development/terminalfour/src/sass/inner-style.scss
+++ b/development/terminalfour/src/sass/inner-style.scss
@@ -58,3 +58,5 @@ header {
 @import "ContentTypes/card";
 @import "ContentTypes/user-profile";
 @import "ContentTypes/button-styles";
+/** print styles **/
+@import "print";
