--- a/development/terminalfour/src/sass/inner-style.scss
+++ b/development/terminalfour/src/sass/inner-style.scss
@@ -13,8 +13,6 @@
 
 
 
-
-
 /** SVG fallback for IE 8 **/
 header {
     background-color: #505050;
@@ -59,4 +57,4 @@ header {
 @import "ContentTypes/user-profile";
 @import "ContentTypes/button-styles";
 /** print styles **/
-@import "print";
+// @import "print";
