--- a/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
@@ -18,14 +18,14 @@
 .tool {
   position: relative;
   margin: 0 auto;
-  padding: 1.3em 0.5em 1.5em 0.5em;
-  height: 4em;
+  padding: 1.1em 0.5em 1.3em 0.5em;
   font-size: 1.2em;
   background-color: #fff;
   color: #00447c;
   text-align: left;
   border-bottom: 1px solid #00447c;
   transition: .5s;
+  white-space: nowrap;
 }
 
 .tool:hover {
