--- a/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
@@ -2,7 +2,7 @@
   border-radius: 15px;
   text-align: center;
   margin-bottom: .5em;
-  padding: 1.25em;
+  padding: 3.5vw;
   color: #fff;
   font-size: 3.0vw;
 }
