--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -10477,7 +10477,7 @@ table.caption {
   border-radius: 15px;
   text-align: center;
   margin-bottom: .5em;
-  padding: 1.25em;
+  padding: 3.5vw;
   color: #fff;
   font-size: 3.0vw;
 }
