--- a/app/styles/ContentTypes/_stylestoimport.scss
+++ b/app/styles/ContentTypes/_stylestoimport.scss
@@ -287,7 +287,7 @@ ul.breadcrumb a {
 
 .custom-search-input{
     margin-top:5px;
-    height:40px;
+    height: auto;
     padding: 3px;
     border: solid 1px #E4E4E4;
     border-radius: 6px;
