comments back print styles and removes admissions panel style

--- a/development/terminalfour/src/sass/inner-style.scss
+++ b/development/terminalfour/src/sass/inner-style.scss
@@ -57,4 +57,4 @@ header {
 @import "ContentTypes/user-profile";
 @import "ContentTypes/button-styles";
 /** print styles **/
-// @import "print";
+@import "print";
