--- a/development/terminalfour/src/sass/inner-style.scss
+++ b/development/terminalfour/src/sass/inner-style.scss
@@ -28,7 +28,7 @@ header {
 @import "msu-partials/msu-utils";
 @import "msu-partials/homepage-base";
 @import "msu-partials/homepage-second-nav";
-@import "msu-partials/homepage-feature-caption";
+// @import "msu-partials/homepage-feature-caption";
 @import "msu-partials/homepage-ryor";
 @import "msu-partials/homepage-news";
 @import "msu-partials/homepage-at-a-glance";
