--- a/development/terminalfour/src/sass/ContentTypes/_TableStyles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_TableStyles.scss
@@ -211,6 +211,9 @@ table.caption {
   background-color: #faf2cc;
   border-color: #f8e5be
 }
+.table-striped > tbody > tr:nth-of-type(odd) {
+  background-color: #d4d4d4;
+}
 @media (max-width: 768px) {
   .importedTableCSS .table-responsive {
     width: 100%;
