Mai Linh's style updates

--- a/development/terminalfour/src/sass/ContentTypes/_panel.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_panel.scss
@@ -9,9 +9,9 @@
     font-size: 24px;
 }
 .panel-default > .panel-heading {
-    background: black;
+    background: #717073;
     color: #fff;
-    font-size: 1.5em;
+    font-size: 1.2rem;
     border-color: black;
 }
 .panel-title {
