--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -112,29 +112,29 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   // padding-left: .5em;
   color: #fff;
-  font-size: 2.375rem;
+  font-size: 2.25rem;
   font-weight: 800;
   // text-transform: uppercase;
 }
 h2 {
 font-weight: 700;
-color: #4e5462;
-font-size: 2.25rem;
+color: #00447c;
+font-size: 1.75rem;
 width: 100%;
 margin: 0px;
-margin-bottom:15px;
+margin-bottom:5px;
 line-height: 1.3;
 }
 h3 {
-  color: #414b63;
-  font-size: 1.875em;
+  color: #5091cd;
+  font-size: 1.3rem;
   font-weight: 500;
   margin-bottom: 4px;
   margin-top: 2px
 }
 h4 {
   color: #000000;
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   font-weight: 700;
   line-height: 1.3;
 }
