--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -144,11 +144,13 @@ h5 {
   font-weight: 700;
 }
 h6 {
-  color: #e74c3c;
-  font-size: 13px;
-  font-weight: 500
+  background-color: #005fae;
+  color: #fff;
+  text-align: left;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 5px;
 }
-
 // .msudenver_logo img {
 //   padding-bottom: 15px;
 //   padding-top: 25px;
