adjust student pic css so it covers full allotted space

--- a/development/terminalfour/src/html/includes/homepage-ryor.html
+++ b/development/terminalfour/src/html/includes/homepage-ryor.html
@@ -8,19 +8,13 @@
             <p class="clearfix main-button visible-md visible-lg"><a href="javascript:void(0)" class="btn homepage-btn">Read his full story <i role="presentation" class="fa fa-angle-right fa-lg"></i></a> </p>
       </div>
    </div>
-   <div class="ryor-student">
+   <div class="ryor-student-picbox">
      <div class="ryor-image-mobile visible-xs visible-sm visible-md visible-lg">
          <svg xmlns="http://www.w3.org/2000/svg" stroke="white" xmlns:xlink="http://www.w3.org/1999/xlink" style="position:relative">
             <use xlink:href="style-assets/media/defs/svg/sprite.defs.svg#runyourownroad" />
          </svg>
      </div>
        <img class="ryor-student-image" src="style-assets/media/RYOR_lefebre.jpg" alt="Student image" />
-     <div class="visible-md visible-lg" style="position:absolute; visibility: hidden;">
-             <h1 class="feature-heading">Cristian Solano-Cordova</h1>
-             <h2 class="feature-heading-sub">MSU Denver ’17.</h2>
-             <p class="feature-text">White House Advisor. Dreamer. Roadrunner.</p>
-              <p class="clearfix main-button visible-md visible-lg"><a href="javascript:void(0)" class="btn homepage-btn">Read his full story <i role="presentation" class="fa fa-angle-right fa-lg"></i></a> </p>
-     </div>
    </div>
    <div class="visible-xs visible-sm">
      <div class="ryor-student">
