add media query for image at large screen

--- a/development/terminalfour/src/sass/msu-partials/_homepage-ryor.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-ryor.scss
@@ -160,3 +160,10 @@
         max-width: 120%;
     }
 }
+
+@media (min-width: $screen-lg-min) {
+    .ryor-student-image {
+        max-width: 100%;
+    }
+
+}
