--- a/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_buttons.scss
+++ b/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_buttons.scss
@@ -10,13 +10,13 @@
   display: inline-block;
   margin-bottom: 0; // For input.btn
   font-weight: $btn-font-weight;
-  text-align: center;
+  text-align: left;;
   vertical-align: middle;
   touch-action: manipulation;
   cursor: pointer;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid transparent;
-  white-space: nowrap;
+  white-space: normal;
   @include button-size($padding-base-vertical, $padding-base-horizontal, $font-size-base, $line-height-base, $btn-border-radius-base);
   @include user-select(none);
 
