--- a/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
@@ -1,16 +1,3 @@
-.action-btns {
-  border-radius: 15px;
-  text-align: center;
-  margin-bottom: .5em;
-  padding: 3.5vw;
-  color: #fff;
-  font-size: 3.0vw;
-}
-
-.action-btns-container {
-  margin: 0em 0em 0em 0em;
-}
-
 .actionHeader.events {
     background-color: #000000;
 }
@@ -77,6 +64,23 @@
   text-align:center;
 }
 
+.action-section {
+  padding: 0;
+  height: 4em;
+  margin-bottom: 0.5em;
+}
+
+.action-box {
+  width: 100%;
+  color: #fff;
+  height: 100%;
+  z-index: 100;
+  line-height: 1.5em;
+  margin: 0em 0em 0.5em 0em;
+  display: table;
+  border-radius: 15px;
+}
+
 .admissions-deadlines-container {
   padding: 5px 8px 30px;
   line-height: 1.428571429;
@@ -105,20 +109,35 @@
 }
 
 @media screen and (min-width: 768px) {
+  .action-btns {
+    font-size: 2.5vw;
+  }
+
   .info-box {
     width: 96%;
   }
-}
+
   .tool {
     font-size: 1.2em;
   }
 
+  .panel {
+    max-height:0px;
+  }
+
+  .action-box {
+    width: 96%;
+  }
+  .action-section {
+    padding: 13px 0 13px 0;
+    height: 8em;
+    margin-bottom: 0.5em;
+  }
+}
+
 @media screen and (min-width: 992px) {
   .action-btns {
     font-size: 1.75em;
-  }
-  .action-btns-container {
-    margin: 0em;
   }
   .info-box {
     font-size: 1.5em;
