move previous commit to _navmenu.scss (allow mobile secondary side menu to scroll)

--- a/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
@@ -174,8 +174,11 @@
     padding-right: 15px;
   }
 
-
-
+@media (max-width: $screen-sm-max) {
+  #menu {
+    overflow-x: scroll;
+  }
+}
 
 @media (max-width: 991px) {
 
