--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -10071,6 +10071,11 @@ a:focus, a:hover {
 }
 
 @media (max-width: 991px) {
+  #menu {
+    overflow-x: scroll;
+  }
+}
+@media (max-width: 991px) {
   #layout {
     position: relative;
     padding-left: 0;
