fixes issues with the builder and button border moved to _button-styles.scss

--- a/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
@@ -6,7 +6,10 @@
     // box-shadow: 1px 5px 5px rgba(0,0,0,0.175);
     text-align: left;
     white-space: normal;
+    border: 0px solid transparent;
 }
+
+
 
 .btn:hover {
 opacity: 1.5;
