changes the program card class to card-program

--- a/development/terminalfour/src/html/includes/content.html
+++ b/development/terminalfour/src/html/includes/content.html
@@ -441,17 +441,17 @@
 
 </div> <div class="col-xs-12 col-md-6 picture-item tile fig-tile" data-groups='["","all"]' >
   <a href="/tst/wcmstestsite/program-description-fact-sheet-content-type.shtml" >
-  <div class="card ">
-      <h3 class="degreeTitle">Display Name of Program Description Fact Sheet</h3>
-        <span class="degreeType" >  </span>
+  <div class="card-program Minor ">
+      <h3 class="degreeTitle">Program Degree Minor</h3>
+        <span class="degreeType" >Minor  </span>
 
     </div>
   </a>
 </div><div class="col-xs-12 col-md-6 picture-item" data-groups='["Bachelor","all"]'>
   <a href="/etc/">
-  <div class="card  Bachelor">
-     <h3 class="degreeTitle">Display Name of Program Description Short Content Type</h3>
-        <span class="degreeType" >Bachelor of Music</span>
+  <div class="card-program  Bachelor">
+     <h3 class="degreeTitle">Music Bachelor Degree</h3>
+        <span class="degreeType" >Bachelor of Arts</span>
    </div>
   </a>
  </div>
