--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -9735,10 +9735,6 @@ section.filter-titles {
   color: #3A3A3A;
 }
 
-.content {
-  background: none !important;
-}
-
 .card-program.Master {
   border-left: 10px solid #717073;
 }
@@ -9870,11 +9866,7 @@ a:focus, a:hover {
   background-color: rgba(0, 69, 124, 0.56);
 }
 
-.btn-default:hover {
-  background-color: #EFEFEF;
-}
-
-.academic-programs {
+.btn-academic-programs {
   font-weight: 800 !important;
   text-transform: uppercase;
   text-align: left;
