fixes academic program seach buttons

--- a/development/terminalfour/src/sass/ContentTypes/_programs.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_programs.scss
@@ -194,6 +194,8 @@ background-color: rgba(0, 69, 124, 0.56);
     font-weight: 800 !important;
     text-transform: uppercase;
     text-align: left;
+    border: 1px solid #ccc !important;
+    width: 100%;
 }
 
 .fa.fa-square {
