add back link styling lost in previous push

--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -11340,6 +11340,11 @@ a.t4Edit-page:hover {
   padding-bottom: 15px;
 }
 
+.content a {
+  color: #007dc3;
+  font-weight: 700;
+}
+
 .card {
   background: #fff;
   padding: 1em;
