--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -271,3 +271,7 @@ a.t4Edit-page:hover {
     padding-top: 15px;
     padding-bottom: 15px;
 }
+.content a {
+  color: #007dc3;
+  font-weight: 700;
+}
